--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ nbdist/
 .nb-gradle/
 
 # End of https://www.gitignore.io/api/netbeans
+/CrudJSF/nbproject/private/
+/CurlJSF/nbproject/private/
+/usuarios/nbproject/private/
